[CI][UR] Detect changes in ur-* workflows (as 'ur' label)

--- a/.github/workflows/sycl-detect-changes.yml
+++ b/.github/workflows/sycl-detect-changes.yml
@@ -74,6 +74,7 @@ jobs:
               - 'sycl/test-e2e/(ESIMD|InvokeSimd)/**'
             ur:
               - 'unified-runtime/**'
+              - .github/workflows/ur-*
 
       - name: Set output
         id: result
