--- a/unified-runtime/scripts/core/exp-bindless-images.yml
+++ b/unified-runtime/scripts/core/exp-bindless-images.yml
@@ -113,6 +113,9 @@ etors:
     - name: BINDLESS_SAMPLE_2D_USM_EXP
       value: "0x201C"
       desc: "[$x_bool_t] returns true if the device supports sampling USM backed 2D sampled image data."
+    - name: BINDLESS_IMAGES_GATHER_EXP
+      value: "0x201D"
+      desc: "[$x_bool_t] returns true if the device supports sampled image gather."
 --- #--------------------------------------------------------------------------
 type: enum
 extend: true
