[DevTSAN][E2E] Run test with deflake script to make positive tests more robust
Also disable two unexpected flaky negative tests for further investigation

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -202,3 +202,4 @@ llvm/test/Instrumentation/MemorySanitizer/ @intel/dpcpp-sanitizers-review
 llvm/test/Instrumentation/ThreadSanitizer/ @intel/dpcpp-sanitizers-review
 sycl/test-e2e/AddressSanitizer/ @intel/dpcpp-sanitizers-review
 sycl/test-e2e/MemorySanitizer/ @intel/dpcpp-sanitizers-review
+sycl/test-e2e/ThreadSanitizer/ @intel/dpcpp-sanitizers-review
