--- a/sycl/test-e2e/ThreadSanitizer/lit.local.cfg
+++ b/sycl/test-e2e/ThreadSanitizer/lit.local.cfg
@@ -21,5 +21,13 @@ config.substitutions.append(
     ("%device_tsan_flags", "-Xarch_device -fsanitize=thread")
 )
 
+config.substitutions.append(
+    (
+        "%deflake ",
+        os.path.join(os.path.dirname(__file__), "deflake.bash")
+        + " 10 ",
+    )
+)
+
 if "-fsanitize=address" in config.cxx_flags or "-fsanitize=memory" in config.cxx_flags:
     config.unsupported=True
