--- a/unified-runtime/source/loader/loader.map.in
+++ b/unified-runtime/source/loader/loader.map.in
@@ -259,6 +259,7 @@
 		urPrintDeviceReleaseParams;
 		urPrintDeviceRetainParams;
 		urPrintDeviceSelectBinaryParams;
+		urPrintDeviceThrottleReasonsFlags;
 		urPrintDeviceType;
 		urPrintDeviceUsmAccessCapabilityFlags;
 		urPrintEnqueueCommandBufferExpParams;
