add UR docker TEST

--- a/.github/workflows/sycl-linux-precommit.yml
+++ b/.github/workflows/sycl-linux-precommit.yml
@@ -37,7 +37,8 @@ jobs:
 
   build:
     needs: [detect_changes]
-    if: always() && success()
+    # if: always() && success()
+    if: false
     uses: ./.github/workflows/sycl-linux-build.yml
     with:
       build_ref: ${{ github.sha }}
@@ -53,7 +54,8 @@ jobs:
 
   run_prebuilt_e2e_tests:
     needs: [build, detect_changes]
-    if: ${{ always() && !cancelled() && needs.build.outputs.build_conclusion == 'success' }}
+    # if: ${{ always() && !cancelled() && needs.build.outputs.build_conclusion == 'success' }}
+    if: false
     strategy:
       fail-fast: false
       matrix:
@@ -146,11 +148,12 @@ jobs:
 
   test-perf:
     needs: [build, detect_changes]
-    if: |
-      always() && !cancelled()
-      && needs.build.outputs.build_conclusion == 'success'
-      && (contains(github.event.pull_request.labels.*.name, 'run-perf-tests')
-          || contains(needs.detect_changes.outputs.filters, 'perf-tests'))
+    # if: |
+    #   always() && !cancelled()
+    #   && needs.build.outputs.build_conclusion == 'success'
+    #   && (contains(github.event.pull_request.labels.*.name, 'run-perf-tests')
+    #       || contains(needs.detect_changes.outputs.filters, 'perf-tests'))
+    if: false
     strategy:
       fail-fast: false
       matrix:
