--- a/.github/workflows/sycl-linux-precommit-aws.yml
+++ b/.github/workflows/sycl-linux-precommit-aws.yml
@@ -20,103 +20,107 @@ permissions:
   contents: read
 
 jobs:
-  create-check:
-    runs-on: [Linux, aux-tasks]
-    permissions:
-      checks: write
-      statuses: write
-    steps:
-      - uses: actions/github-script@v7
-        with:
-          script: |
-            const sha = context.payload.workflow_run.head_sha
-            const run_id = '${{ github.run_id }}'
-            const this_run_url = 'https://github.com/' + context.repo.owner + '/' + context.repo.repo + '/actions/runs/' + run_id
-
-            // Create commit status.
-            await github.request('POST /repos/{owner}/{repo}/statuses/{sha}', {
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              sha: sha,
-              state: 'pending',
-              target_url: this_run_url,
-              description: 'SYCL E2E on AWS CUDA',
-              context: 'SYCL E2E on AWS CUDA',
-            })
-
-  aws-start:
+  do-nothing:
     runs-on: ubuntu-latest
-    environment: aws
     steps:
-      - uses: actions/checkout@v4
-        with:
-          sparse-checkout: devops/actions/aws-ec2
-      - run: npm install ./devops/actions/aws-ec2
-      - uses: ./devops/actions/aws-ec2
-        with:
-          mode: start
-          runs-on-list: '[{"runs-on":"aws_cuda-${{ github.event.workflow_run.id }}-${{ github.event.workflow_run.run_attempt }}","aws-ami":"ami-01cb0573cb039ab24","aws-type":["g5.2xlarge","g5.4xlarge"],"aws-disk":"/dev/sda1:64","aws-spot":"false"}]'
-          GH_PERSONAL_ACCESS_TOKEN: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
-          AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
-          AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
+      - run: echo 'do nothing'
+  # create-check:
+  #   runs-on: [Linux, aux-tasks]
+  #   permissions:
+  #     checks: write
+  #     statuses: write
+  #   steps:
+  #     - uses: actions/github-script@v7
+  #       with:
+  #         script: |
+  #           const sha = context.payload.workflow_run.head_sha
+  #           const run_id = '${{ github.run_id }}'
+  #           const this_run_url = 'https://github.com/' + context.repo.owner + '/' + context.repo.repo + '/actions/runs/' + run_id
 
-  e2e-cuda:
-    needs: [aws-start]
-    uses: ./.github/workflows/sycl-linux-run-tests.yml
-    with:
-      name: CUDA E2E
-      runner: '["aws_cuda-${{ github.event.workflow_run.id }}-${{ github.event.workflow_run.run_attempt }}"]'
-      image: ghcr.io/intel/llvm/ubuntu2204_build:latest
-      image_options: -u 1001 --gpus all --cap-add SYS_ADMIN --env NVIDIA_DISABLE_REQUIRE=1
-      target_devices: cuda:gpu
-      # No idea why but that seems to work and be in sync with the main
-      # pre-commit workflow.
-      repo_ref: ${{ github.event.workflow_run.referenced_workflows[0].sha }}
+  #           // Create commit status.
+  #           await github.request('POST /repos/{owner}/{repo}/statuses/{sha}', {
+  #             owner: context.repo.owner,
+  #             repo: context.repo.repo,
+  #             sha: sha,
+  #             state: 'pending',
+  #             target_url: this_run_url,
+  #             description: 'SYCL E2E on AWS CUDA',
+  #             context: 'SYCL E2E on AWS CUDA',
+  #           })
 
-      sycl_toolchain_artifact: sycl_linux_default
-      sycl_toolchain_archive: llvm_sycl.tar.zst
-      sycl_toolchain_decompress_command: zstd
+  # aws-start:
+  #   runs-on: ubuntu-latest
+  #   environment: aws
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #       with:
+  #         sparse-checkout: devops/actions/aws-ec2
+  #     - run: npm install ./devops/actions/aws-ec2
+  #     - uses: ./devops/actions/aws-ec2
+  #       with:
+  #         mode: start
+  #         runs-on-list: '[{"runs-on":"aws_cuda-${{ github.event.workflow_run.id }}-${{ github.event.workflow_run.run_attempt }}","aws-ami":"ami-01cb0573cb039ab24","aws-type":["g5.2xlarge","g5.4xlarge"],"aws-disk":"/dev/sda1:64","aws-spot":"false"}]'
+  #         GH_PERSONAL_ACCESS_TOKEN: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
+  #         AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
+  #         AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
 
-  update-check:
-    needs: [create-check, e2e-cuda]
-    if: always()
-    runs-on: [Linux, aux-tasks]
-    permissions:
-      checks: write
-      statuses: write
-    steps:
-      - uses: actions/github-script@v7
-        with:
-          script: |
-            const sha = context.payload.workflow_run.head_sha
-            const run_id = '${{ github.run_id }}'
-            const this_run_url = 'https://github.com/' + context.repo.owner + '/' + context.repo.repo + '/actions/runs/' + run_id
+  # e2e-cuda:
+  #   needs: [aws-start]
+  #   uses: ./.github/workflows/sycl-linux-run-tests.yml
+  #   with:
+  #     name: CUDA E2E
+  #     runner: '["aws_cuda-${{ github.event.workflow_run.id }}-${{ github.event.workflow_run.run_attempt }}"]'
+  #     image: ghcr.io/intel/llvm/ubuntu2204_build:latest
+  #     image_options: -u 1001 --gpus all --cap-add SYS_ADMIN --env NVIDIA_DISABLE_REQUIRE=1
+  #     target_devices: cuda:gpu
+  #     # No idea why but that seems to work and be in sync with the main
+  #     # pre-commit workflow.
+  #     repo_ref: ${{ github.event.workflow_run.referenced_workflows[0].sha }}
 
-            // Update commit status.
-            await github.request('POST /repos/{owner}/{repo}/statuses/{sha}', {
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              sha: sha,
-              state: '${{ needs.e2e-cuda.result }}',
-              target_url: this_run_url,
-              description: 'SYCL E2E on AWS CUDA',
-              context: 'SYCL E2E on AWS CUDA',
-            })
+  #     sycl_toolchain_artifact: sycl_linux_default
+  #     sycl_toolchain_archive: llvm_sycl.tar.zst
+  #     sycl_toolchain_decompress_command: zstd
 
-  aws-stop:
-    needs: [aws-start, e2e-cuda]
-    if: always()
-    runs-on: ubuntu-latest
-    environment: aws
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          sparse-checkout: devops/actions/aws-ec2
-      - run: npm install ./devops/actions/aws-ec2
-      - uses: ./devops/actions/aws-ec2
-        with:
-          mode: stop
-          runs-on-list: '[{"runs-on":"aws_cuda-${{ github.event.workflow_run.id }}-${{ github.event.workflow_run.run_attempt }}","aws-ami":"ami-01cb0573cb039ab24","aws-type":["g5.2xlarge","g5.4xlarge"],"aws-disk":"/dev/sda1:64","aws-spot":"false"}]'
-          GH_PERSONAL_ACCESS_TOKEN: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
-          AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
-          AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
+  # update-check:
+  #   needs: [create-check, e2e-cuda]
+  #   if: always()
+  #   runs-on: [Linux, aux-tasks]
+  #   permissions:
+  #     checks: write
+  #     statuses: write
+  #   steps:
+  #     - uses: actions/github-script@v7
+  #       with:
+  #         script: |
+  #           const sha = context.payload.workflow_run.head_sha
+  #           const run_id = '${{ github.run_id }}'
+  #           const this_run_url = 'https://github.com/' + context.repo.owner + '/' + context.repo.repo + '/actions/runs/' + run_id
+
+  #           // Update commit status.
+  #           await github.request('POST /repos/{owner}/{repo}/statuses/{sha}', {
+  #             owner: context.repo.owner,
+  #             repo: context.repo.repo,
+  #             sha: sha,
+  #             state: '${{ needs.e2e-cuda.result }}',
+  #             target_url: this_run_url,
+  #             description: 'SYCL E2E on AWS CUDA',
+  #             context: 'SYCL E2E on AWS CUDA',
+  #           })
+
+  # aws-stop:
+  #   needs: [aws-start, e2e-cuda]
+  #   if: always()
+  #   runs-on: ubuntu-latest
+  #   environment: aws
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #       with:
+  #         sparse-checkout: devops/actions/aws-ec2
+  #     - run: npm install ./devops/actions/aws-ec2
+  #     - uses: ./devops/actions/aws-ec2
+  #       with:
+  #         mode: stop
+  #         runs-on-list: '[{"runs-on":"aws_cuda-${{ github.event.workflow_run.id }}-${{ github.event.workflow_run.run_attempt }}","aws-ami":"ami-01cb0573cb039ab24","aws-type":["g5.2xlarge","g5.4xlarge"],"aws-disk":"/dev/sda1:64","aws-spot":"false"}]'
+  #         GH_PERSONAL_ACCESS_TOKEN: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
+  #         AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
+  #         AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
